@@ -216,15 +216,20 @@ namespace CIAO_Writer_Sender_Impl
     ::DDS::DataWriter_var dds_dw =
       this->context_->get_connection_info_write_dds_entity ();
 
+    if (::CORBA::is_nil (dds_dw.in ()))
+      {
+        ACE_ERROR ((LM_ERROR, "ERROR : Sender_exec_i::configuration_complete - "
+                    "Datawriter connection is NIL.\n"));
+        throw CORBA::INTERNAL ();
+      }
     typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-        CIAO_WriterTestConnector_DDS_Event_Impl::DDS_DDS_Event_Traits::value_type,
-        CIAO_WriterTestConnector_DDS_Event_Impl::WriterTest_DDS_Traits::value_type> DataWriter_type;
+        CIAO_WriterTestConnector_DDS_Event_Impl::DDS_DDS_Event_Traits,
+        CIAO_WriterTestConnector_DDS_Event_Impl::WriterTest_DDS_Traits> DataWriter_type;
 
-    DataWriter_type * typed_ccm_dw = dynamic_cast < DataWriter_type * > (dds_dw.in ());
+    DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dds_dw.in ());
     if (typed_ccm_dw)
       {
-        DDSDataWriter * p = dynamic_cast < DDSDataWriter * > (typed_ccm_dw->get_impl ());
-        this->writer_ = dynamic_cast < WriterTestDataWriter * > (p);
+        this->writer_ = WriterTestDataWriter::narrow (typed_ccm_dw->get_impl ());
         if (!this->writer_)
           {
             ACE_ERROR ((LM_ERROR, "ERROR : Sender_exec_i::configuration_complete - "
@@ -236,7 +241,7 @@ namespace CIAO_Writer_Sender_Impl
     else
       {
         ACE_ERROR ((LM_ERROR, "ERROR : Sender_exec_i::configuration_complete - "
-                    "Error casting DataWriter_var to typed DataWriter\n"));
+                    "Error casting DataWriter to typed DataWriter\n"));
         throw CORBA::INTERNAL ();
       }
   }
